front-end finished

--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -54,7 +54,7 @@
                     <legend>Sobre a aula</legend>
                     <div class="select-block">
                         <label for="subject">Matéria</label>
-                        <select name="suject" id="subject" required>
+                        <select name="subject" id="subject" required>
                             <option value="">Selecione uma opção</option>
                             {% for subject in subjects %}
                                 <option value="{{loop.index}}">{{subject}}</option>
