--- a/public/styles/partials/page-give-classes.css
+++ b/public/styles/partials/page-give-classes.css
@@ -34,6 +34,7 @@
 }
 
 #page-give-classes fieldset legend button {
+    display: block  ;
     background: none;
     border: 0;
     color: var(--color-primary);
@@ -43,6 +44,11 @@
     transition: .2s;
 
 }
+
+#page-give-classes fieldset legend button:nth-of-type(2) {
+    padding-top: 1rem;
+}
+
 
 #page-give-classes fieldset legend button:hover {
     color: var(--color-primary-dark);
